# arxiv-ai-explorer

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirement.txt
backend/airflow/dags/: arxiv_ingestion_dag.py  citation_refresh_dag.py  kg_init_dag.py  paper_processing_dag.py
backend/airflow/plugins/: __init__.py  arxiv_operators.py  citation_operators.py  kg_operators.py  qdrant_operators.py
backend/docker/: Dockerfile.backend
backend/docker/airflow/: Dockerfile.airflow
backend/docker/postgres/: init-multiple-databases.sh  init.sql
backend/docker/qdrant/: config.yml
backend/notebooks/: kg_testing.ipynb  test.ipynb  test_arxiv_pdf_parser_metadata_chunker.ipynb  test_workflow_1_ingestion.ipynb  test_workflow_2_processing.ipynb
backend/src/: config.py  database.py  main.py
backend/src/agents/: base_agent.py  context_management.py  session_factory.py  tools.py
backend/src/core/: __init__.py  logs.py
backend/src/models/: __init__.py  bookmark.py  chat.py  graph_models.py  paper.py  paper_interaction.py  search_history.py  user.py
backend/src/routes/: assistant.py  auth.py  bookmarks.py  chat.py  graph.py  history.py  interactions.py  preferences.py  recommendations.py  search.py
backend/src/services/: auth.py  chat_store.py
backend/src/utils/: __init__.py  arxiv_utils.py
backend/tests/: conftest.py  test_graph_enhanced_search.py
backend/tests/integration/: test_pipelines.py
backend/tests/unit/: test_config.py  test_database.py  test_logs.py  (+1 more)
(+91 files in other folders)
