[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-ai-explorer"
version = "0.1.0"
description = "Intelligent Research Assistant with Multi-Agent Architecture"
authors = [
    {name = "Amine MEKKI", email = "amine.mekki.contact@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.20",
    
    # Database
    "sqlalchemy>=2.0.43",
    "psycopg2>=2.9.10",
    "asyncpg>=0.30.0",

    # Vector Database
    "qdrant-client>=1.15.0",
    
    # Knowledge Graph
    "neo4j>=5.28.0",
    
    # Caching & Sessions
    "redis>=6.4.0",
    
    # Data Validation
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.1.0",
    "loguru>=0.7.3",    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true